third_party/move/move-compiler-v2/tests/ability-checker/bad_inst.exp

Diagnostics:
error: Invalid instantiation
   ┌─ tests/ability-checker/bad_inst.move:13:16
   │
13 │         U<S<T>> { x: S { x: T { } } }
   │                      ^^^^^^^^^^^^^^

error: Invalid instantiation
   ┌─ tests/ability-checker/bad_inst.move:13:3
   │
13 │         U<S<T>> { x: S { x: T { } } }
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
